--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,21 @@
       navTemplate
      </a>
     </li>
+    <li>
+     <a href="test.html">
+      test
+     </a>
+    </li>
+    <li>
+     <a href="test1.html">
+      test1
+     </a>
+    </li>
+    <li>
+     <a href="test2.html">
+      test2
+     </a>
+    </li>
    </ul>
   </div>
  </body>
