--- a/templates/navTemplate.html
+++ b/templates/navTemplate.html
@@ -4,20 +4,16 @@
   </i>
   Back
  </a>
- <a href="./&lt;a href=" index.html"="">
-  index
+ <a href="./index.html">
+  <i class="fas fa-home">
+  </i>
+  Home
  </a>
- .html"&gt;
- <i class="fas fa-home">
- </i>
- Home
- <a href="../&lt;a href=" index.html"="">
-  index
+ <a href="../index.html">
+  <i class="fas fa-level-up-alt">
+  </i>
+  Up
  </a>
- .html"&gt;
- <i class="fas fa-level-up-alt">
- </i>
- Up
  <a href="#" onclick="history.forward(); return false;">
   <i class="fas fa-arrow-right">
   </i>
