--- a/templates/headerTemplate.html
+++ b/templates/headerTemplate.html
@@ -16,8 +16,8 @@
         window.history.forward();
       }
 
-      function goTo<a href="index.html">index</a>() {
-        window.location.href = "./<a href="index.html">index</a>.html";
+      function goToIndex() {
+        window.location.href = "./index.html";
       }
  </script>
 </head>
