Adding gitignore file

--- a/templates/characterTemplate.html
+++ b/templates/characterTemplate.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   DnD
+   title
   </title>
   <link href="../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
