Adding initial character creation script

--- a/templates/characterTemplate.html
+++ b/templates/characterTemplate.html
@@ -62,6 +62,9 @@
       Score
      </th>
      <th class="title">
+      Proficient
+     </th>
+     <th class="title">
       Modifier
      </th>
     </tr>
@@ -70,10 +73,13 @@
       Strength
      </td>
      <td>
-      [score]
+      [strength]
+     </td>
+     <td>
+      [strength proficiency]
      </td>
      <td class="ability-modifier">
-      [modifier]
+      [strength modifier]
      </td>
     </tr>
     <tr>
@@ -81,10 +87,13 @@
       Dexterity
      </td>
      <td>
-      [score]
+      [dexterity]
+     </td>
+     <td>
+      [dexterity proficiency]
      </td>
      <td class="ability-modifier">
-      [modifier]
+      [dexterity modifier]
      </td>
     </tr>
     <tr>
@@ -92,10 +101,13 @@
       Constitution
      </td>
      <td>
-      [score]
+      [constitution]
+     </td>
+     <td>
+      [constitution proficiency]
      </td>
      <td class="ability-modifier">
-      [modifier]
+      [constitution modifier]
      </td>
     </tr>
     <tr>
@@ -103,10 +115,13 @@
       Intelligence
      </td>
      <td>
-      [score]
+      [intelligence]
+     </td>
+     <td>
+      [intelligence proficiency]
      </td>
      <td class="ability-modifier">
-      [modifier]
+      [intelligence modifier]
      </td>
     </tr>
     <tr>
@@ -114,10 +129,13 @@
       Wisdom
      </td>
      <td>
-      [score]
+      [wisdom]
+     </td>
+     <td>
+      [wisdom]
      </td>
      <td class="ability-modifier">
-      [modifier]
+      [wisdom modifier]
      </td>
     </tr>
     <tr>
@@ -125,10 +143,13 @@
       Charisma
      </td>
      <td>
-      [score]
+      [charisma]
+     </td>
+     <td>
+      [charisma proficiency]
      </td>
      <td class="ability-modifier">
-      [modifier]
+      [charisma modifier]
      </td>
     </tr>
    </table>
@@ -159,10 +180,10 @@
        Acrobatics (Dex)
       </td>
       <td class="proficient">
-       Yes/No
+       [acrobatics proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [acrobatics modifier]
       </td>
      </tr>
      <tr>
@@ -170,10 +191,10 @@
        Animal Handling (Wis)
       </td>
       <td class="proficient">
-       Yes/No
+       [animal handling proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [animal handling modifier]
       </td>
      </tr>
      <tr>
@@ -181,10 +202,10 @@
        Arcana (Int)
       </td>
       <td class="proficient">
-       Yes/No
+       [arcana proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [arcana modifier]
       </td>
      </tr>
      <tr>
@@ -192,10 +213,10 @@
        Athletics (Str)
       </td>
       <td class="proficient">
-       Yes/No
+       [athletics proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [athletics modifier]
       </td>
      </tr>
      <tr>
@@ -203,10 +224,10 @@
        Deception (Cha)
       </td>
       <td class="proficient">
-       Yes/No
+       [deception proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [deception modifier]
       </td>
      </tr>
      <tr>
@@ -214,10 +235,10 @@
        History (Int)
       </td>
       <td class="proficient">
-       Yes/No
+       [history proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [history modifier]
       </td>
      </tr>
      <tr>
@@ -225,10 +246,10 @@
        Insight (Wis)
       </td>
       <td class="proficient">
-       Yes/No
+       [insight proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [insight modifier]
       </td>
      </tr>
      <tr>
@@ -236,10 +257,10 @@
        Intimidation (Cha)
       </td>
       <td class="proficient">
-       Yes/No
+       [intimidation proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [intimidation modifier]
       </td>
      </tr>
      <tr>
@@ -247,10 +268,10 @@
        Investigation (Int)
       </td>
       <td class="proficient">
-       Yes/No
+       [investigation proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [investigation modifier]
       </td>
      </tr>
      <tr>
@@ -258,10 +279,10 @@
        Medicine (Wis)
       </td>
       <td class="proficient">
-       Yes/No
+       [medicine proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [medicine modifier]
       </td>
      </tr>
      <tr>
@@ -269,10 +290,10 @@
        Nature (Int)
       </td>
       <td class="proficient">
-       Yes/No
+       [nature proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [nature modifier]
       </td>
      </tr>
      <tr>
@@ -280,10 +301,10 @@
        Perception (Wis)
       </td>
       <td class="proficient">
-       Yes/No
+       [perception proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [perception modifier]
       </td>
      </tr>
      <tr>
@@ -291,10 +312,10 @@
        Performance (Cha)
       </td>
       <td class="proficient">
-       Yes/No
+       [performance proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [performance modifier]
       </td>
      </tr>
      <tr>
@@ -302,10 +323,10 @@
        Persuasion (Cha)
       </td>
       <td class="proficient">
-       Yes/No
+       [persuasion proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [persuasion modifier]
       </td>
      </tr>
      <tr>
@@ -313,10 +334,10 @@
        Religion (Int)
       </td>
       <td class="proficient">
-       Yes/No
+       [religion proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [religion modifier]
       </td>
      </tr>
      <tr>
@@ -324,10 +345,10 @@
        Sleight of Hand (Dex)
       </td>
       <td class="proficient">
-       Yes/No
+       [sleight of hand proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [sleight of hand modifier]
       </td>
      </tr>
      <tr>
@@ -335,10 +356,10 @@
        Stealth (Dex)
       </td>
       <td class="proficient">
-       Yes/No
+       [stealth proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [stealth modifier]
       </td>
      </tr>
      <tr>
@@ -346,10 +367,10 @@
        Survival (Wis)
       </td>
       <td class="proficient">
-       Yes/No
+       [survival proficiency]
       </td>
       <td class="ability-modifier">
-       [modifier]
+       [survival modifier]
       </td>
      </tr>
     </tbody>
@@ -374,24 +395,6 @@
      </strong>
      [description]
     </li>
-    <li>
-     <strong>
-      Item 3:
-     </strong>
-     [description]
-    </li>
-    <li>
-     <strong>
-      Item 4:
-     </strong>
-     [description]
-    </li>
-    <li>
-     <strong>
-      Item 5:
-     </strong>
-     [description]
-    </li>
    </ul>
   </div>
   <hr/>
@@ -401,7 +404,7 @@
     Background Information
    </h3>
    <p>
-    [Background information]
+    [background information]
    </p>
   </div>
   <hr/>
