Added character creation script from character creation

--- a/templates/characterTemplate.html
+++ b/templates/characterTemplate.html
@@ -44,7 +44,7 @@
     </p>
    </div>
    <div class="character-info">
-    <img alt="[image-description]" class="character-img" src="[image-url]"/>
+    <a href="[image-url]"><img alt="[image-description]" class="character-img" src="[image-url]"/></a>
    </div>
   </div>
   <hr/>
@@ -132,7 +132,7 @@
       [wisdom]
      </td>
      <td>
-      [wisdom]
+      [wisdom proficiency]
      </td>
      <td class="ability-modifier">
       [wisdom modifier]
