Adding player and non-player options

--- a/templates/characterTemplate.html
+++ b/templates/characterTemplate.html
@@ -44,7 +44,9 @@
     </p>
    </div>
    <div class="character-info">
-    <a href="[image-url]"><img alt="[image-description]" class="character-img" src="[image-url]"/></a>
+    <a href="[image-url]">
+     <img alt="[image-description]" class="character-img" src="[image-url]"/>
+    </a>
    </div>
   </div>
   <hr/>
