--- a/templates/characterTemplate.html
+++ b/templates/characterTemplate.html
@@ -26,22 +26,80 @@
  <body>
   <!-- Top section for character information -->
   <div class="container">
-   <div class="character-info">
-    <h2>
-     [name]
-    </h2>
-    <p>
-     Level: [level]
-    </p>
-    <p>
-     Race: [race]
-    </p>
-    <p>
-     Class: [class]
-    </p>
-    <p>
-     Background: [background]
-    </p>
+   <div>
+    <div class="character-info">
+     <h2>
+      [name]
+     </h2>
+     <p>
+      <i>
+       [size] [type], [alignment]
+      </i>
+     </p>
+     <p>
+      Level: [level]
+     </p>
+     <p>
+      Race: [race]
+     </p>
+     <p>
+      Class: [class]
+     </p>
+     <p>
+      Background: [background]
+     </p>
+    </div>
+    <hr/>
+    <!-- Section for Misc Stats -->
+    <div class="dnd-list">
+     <h3>
+      Miscillaneous Stats
+     </h3>
+     <ul>
+      <li>
+       <strong>
+        Armor Class:
+       </strong>
+       [ac]
+      </li>
+      <li>
+       <strong>
+        Hit Points:
+       </strong>
+       [hp]
+      </li>
+      <li>
+       <strong>
+        Speed:
+       </strong>
+       [speed]
+      </li>
+      <li>
+       <strong>
+        Resistances:
+       </strong>
+       [resistances]
+      </li>
+      <li>
+       <strong>
+        Immunities:
+       </strong>
+       [immunities]
+      </li>
+      <li>
+       <strong>
+        Senses:
+       </strong>
+       [senses]
+      </li>
+      <li>
+       <strong>
+        Languages:
+       </strong>
+       [languages]
+      </li>
+     </ul>
+    </div>
    </div>
    <div class="character-info">
     <a href="[image-url]">
@@ -379,24 +437,23 @@
    </table>
   </div>
   <hr/>
+  <!-- Section for abilities -->
+  <div class="dnd-list">
+   <h3>
+    Abilities, Spells, and Actions
+   </h3>
+   <ul>
+    [abilities list]
+   </ul>
+  </div>
+  <hr/>
   <!-- Section for equipment -->
   <div class="dnd-list">
    <h3>
     Equipment
    </h3>
    <ul>
-    <li>
-     <strong>
-      Item 1:
-     </strong>
-     [description]
-    </li>
-    <li>
-     <strong>
-      Item 2:
-     </strong>
-     [description]
-    </li>
+    [equipment list]
    </ul>
   </div>
   <hr/>
