Added prettifier to mmorpdnd gui

--- a/templates/settlementTemplate.html
+++ b/templates/settlementTemplate.html
@@ -26,21 +26,24 @@
  <body>
   <!-- Top section for settlement information -->
   <div class="container">
-    <div class="character-info">
-     <h2>
-      [name]
-     </h2>
-     <p>
-      <i>
-       [size] [type]
-      </i>
-     </p>     
-     <p>
-      <i>
-       <strong>Summary: </strong>[summary]
-      </i>
-     </p>
-    </div>
+   <div class="character-info">
+    <h2>
+     [name]
+    </h2>
+    <p>
+     <i>
+      [size] [type]
+     </i>
+    </p>
+    <p>
+     <i>
+      <strong>
+       Summary:
+      </strong>
+      [summary]
+     </i>
+    </p>
+   </div>
    <div class="character-info">
     <a href="[image-url]">
      <img alt="[image-description]" class="character-img" src="[image-url]"/>
