--- a/templates/settlementTemplate.html
+++ b/templates/settlementTemplate.html
@@ -24,6 +24,12 @@
   </script>
  </head>
  <body>
+  <div class="dnd-header">
+   <h3>
+    Settlement
+   </h3>
+  </div>
+  <hr/>
   <!-- Top section for settlement information -->
   <div class="container">
    <div class="character-info">
