--- a/css/mmorpdnd.css
+++ b/css/mmorpdnd.css
@@ -314,11 +314,11 @@ footer a:hover {
 
 /* Style for the image section */
 .dnd-image {
+    display: inline-block;
     max-width: 75%;
     /* Adjust the max-width as needed */
     padding: 10px;
     /* Add some padding for spacing */
-
 }
 
 .dnd-image h3 {
@@ -340,10 +340,12 @@ footer a:hover {
 
 .dnd-image-info {
     margin-top: 10px;
+    width: auto;
     /* Add some space between the image and the info section */
 }
 
 .dnd-image-source a {
+    width: auto;
     color: #00a8ff;
     /* Customize the link color */
     text-decoration: none;
