Added some html files

--- a/templates/jake_the_fortunate.html
+++ b/templates/jake_the_fortunate.html
@@ -3,9 +3,9 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   riven darkwire
+   title
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -24,51 +24,29 @@
   </script>
  </head>
  <body>
-  <div class="navigation">
-   <a href="#" onclick="history.back(); return false;">
-    <i class="fas fa-arrow-left">
-    </i>
-    Back
-   </a>
-   <a href="./index.html">
-    <i class="fas fa-home">
-    </i>
-    Home
-   </a>
-   <a href="../index.html">
-    <i class="fas fa-level-up-alt">
-    </i>
-    Up
-   </a>
-   <a href="#" onclick="history.forward(); return false;">
-    <i class="fas fa-arrow-right">
-    </i>
-    Forward
-   </a>
-  </div>
   <!-- Top section for character information -->
   <div class="container">
    <div>
     <div class="character-info">
      <h2>
-      Riven Darkwire
+      Jake the Fortunate
      </h2>
      <p>
       <i>
-       medium humanoid, neutral evil
+       medium humanoid, neutral
       </i>
      </p>
      <p>
-      Level: 3
+      Level: 1
      </p>
      <p>
-      Race: half-elf
+      Race: human
      </p>
      <p>
-      Class: rogue
+      Class: commoner
      </p>
      <p>
-      Background: spy
+      Background: none
      </p>
     </div>
     <hr/>
@@ -82,19 +60,19 @@
        <strong>
         Armor Class:
        </strong>
-       17
+       12 (no armor)
       </li>
       <li>
        <strong>
         Hit Points:
        </strong>
-       100
+       10
       </li>
       <li>
        <strong>
         Speed:
        </strong>
-       40 feet
+       30 ft.
       </li>
       <li>
        <strong>
@@ -112,20 +90,20 @@
        <strong>
         Senses:
        </strong>
-       passive perception 15, darkvision 60 ft., Passive Perception: 11
+       normal vision, Passive Perception: 10
       </li>
       <li>
        <strong>
         Languages:
        </strong>
-       common, elvish, thieves' cant
+       common
       </li>
      </ul>
     </div>
    </div>
    <div class="character-info">
-    <a href="img/riven_darkwire.jpg">
-     <img alt="riven_darkwire-image" class="character-img" src="img/riven_darkwire.jpg"/>
+    <a href="img/jake_durgo.jpg">
+     <img alt="jake_durgo-image" class="character-img" src="img/jake_durgo.jpg"/>
     </a>
    </div>
   </div>
@@ -155,13 +133,13 @@
       Strength
      </td>
      <td>
-      12
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +1
+      +0
      </td>
     </tr>
     <tr>
@@ -169,13 +147,13 @@
       Dexterity
      </td>
      <td>
-      20
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +5
+      +0
      </td>
     </tr>
     <tr>
@@ -183,13 +161,13 @@
       Constitution
      </td>
      <td>
-      14
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +2
+      +0
      </td>
     </tr>
     <tr>
@@ -197,13 +175,13 @@
       Intelligence
      </td>
      <td>
-      16
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +3
+      +0
      </td>
     </tr>
     <tr>
@@ -211,13 +189,13 @@
       Wisdom
      </td>
      <td>
-      13
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +1
+      +0
      </td>
     </tr>
     <tr>
@@ -225,13 +203,13 @@
       Charisma
      </td>
      <td>
-      16
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +3
+      +0
      </td>
     </tr>
    </table>
@@ -265,7 +243,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -276,7 +254,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -287,7 +265,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -298,7 +276,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -306,11 +284,10 @@
        Deception (Cha)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -321,7 +298,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -332,7 +309,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -343,7 +320,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -351,11 +328,10 @@
        Investigation (Int)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -366,7 +342,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -377,7 +353,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -388,7 +364,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -399,7 +375,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -410,7 +386,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -421,7 +397,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -432,7 +408,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -440,11 +416,10 @@
        Stealth (Dex)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +7
+       +0
       </td>
      </tr>
      <tr>
@@ -455,7 +430,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
     </tbody>
@@ -470,9 +445,9 @@
    <ul>
     <li>
      <strong>
-      sneak attack, evasion, cunning action:
+      impossible luck (natural 20 on all rolls):
      </strong>
-     [sneak attack, evasion, cunning action description]
+     [impossible luck (natural 20 on all rolls) description]
     </li>
    </ul>
   </div>
@@ -485,9 +460,9 @@
    <ul>
     <li>
      <strong>
-      shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools:
+      rusty dagger, tattered clothes:
      </strong>
-     [shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools description]
+     [rusty dagger, tattered clothes description]
     </li>
    </ul>
   </div>
@@ -498,7 +473,7 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Riven Darkwire is a cunning and skilled rogue, whose talents make her a valuable asset for the clandestine Council of Shadows. With a Half-Elf's keen senses and the charm of her human bloodline, she excels in infiltrating high-profile targets and gathering vital information. Equipped with her shadow-woven cloak, a pair of daggers, a hand crossbow, poison vials, a grappling hook, and thieves' tools, Riven's abilities in stealth, investigation, and deception are unmatched. As a member of ambush teams, she scouts enemy positions, creates opportunities for her allies, and employs her mastery of the mist's arcane energies to disorient foes. Her dedication to the Council's cause ensures she will only grow stronger with time, remaining an ever-present threat lurking in the mist's depths, ready to strike when the time is right.
+    Jake is an ordinary human, living an uneventful life. His unassuming appearance and unimpressive skills make him easily overlooked. However, there's an inexplicable twist of fate surrounding Jeff. He is cursed, or rather, blessed with extraordinary luck. No matter the situation, Jeff always seems to come out on top, succeeding where others might fail. Despite this incredible stroke of fortune, Jeff remains humble and somewhat oblivious to his own luck.
    </p>
   </div>
   <hr/>
@@ -507,7 +482,7 @@
     Notes
    </h3>
    <p class="first-paragraph">
-    [notes]
+    Jake's luck is a mysterious force, and even he doesn't fully understand why things always seem to go his way.
    </p>
   </div>
  </body>
